turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:3: error: ')' expected but '.' found.
  for(i <- 0 colors.length-1){
                   ^LangtonsAnt:18: error: illegal start of simple expression
}
^